BusOne/src/objects/BOT_Thera_Class__c.object
<CustomObject>
    <description>Used to store the thera class records related to the Specialty Providers</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup relationship to Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Thera Classes</relationshipLabel>
        <relationshipName>TheraClass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_SPP_ID__c</fullName>
        <description>It is used to store the BOT specialty ID. It is a reference ID for BOT.</description>
        <label>BOT SPP ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Specialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup relationship to Specialty provider and this value will be auto-populated with a trigger.</description>
        <label>Specialty Provider</label>
        <referenceTo>BOT_Specialty_Provider__c</referenceTo>
        <relationshipLabel>Thera Classes</relationshipLabel>
        <relationshipName>Thera_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Thera_ID__c</fullName>
        <description>Used to store the BOT thera ID</description>
        <label>Thera ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Thera Class</label>
    <nameField>
        <label>Thera Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thera Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>